// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline tests should match snapshot 1`] = `
<div
  className="Timeline-Timeline-0-1-1"
>
  <div
    className="Timeline-Track-0-1-2"
  />
  <div
    className="Timeline-Pointer-0-1-3"
    style={
      Object {
        "left": "0%",
      }
    }
  />
  <div
    className="Highlight-Highlight-0-1-4"
    style={
      Object {
        "left": "100%",
      }
    }
  >
    <button
      className="Highlight-Pointer-0-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    />
    <div
      className="Highlight-CaptionHolder-0-1-6"
    >
      <p>
        Lorem ipsum
      </p>
    </div>
  </div>
  <div
    className="Highlight-Highlight-0-1-4"
    style={
      Object {
        "left": "200%",
      }
    }
  >
    <button
      className="Highlight-Pointer-0-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    />
    <div
      className="Highlight-CaptionHolder-0-1-6"
    >
      <img
        alt=""
        src="https://www.fillmurray.com/300/200"
      />
      <p>
        Dolor sit
      </p>
    </div>
  </div>
</div>
`;

exports[`Timeline tests should match snapshot with highlights 1`] = `
<div
  className="Timeline-Timeline-0-1-1"
>
  <div
    className="Timeline-Track-0-1-2"
  />
  <div
    className="Timeline-Pointer-0-1-3"
    style={
      Object {
        "left": "0%",
      }
    }
  />
  <div
    className="Highlight-Highlight-0-1-4"
    style={
      Object {
        "left": "100%",
      }
    }
  >
    <button
      className="Highlight-Pointer-0-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    />
    <div
      className="Highlight-CaptionHolder-0-1-6"
    >
      <p>
        Lorem ipsum
      </p>
    </div>
  </div>
  <div
    className="Highlight-Highlight-0-1-4"
    style={
      Object {
        "left": "200%",
      }
    }
  >
    <button
      className="Highlight-Pointer-0-1-5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    />
    <div
      className="Highlight-CaptionHolder-0-1-6"
    >
      <img
        alt=""
        src="https://www.fillmurray.com/300/200"
      />
      <p>
        Dolor sit
      </p>
    </div>
  </div>
</div>
`;

exports[`Timeline tests should match snapshot without highlights 1`] = `
<div
  className="Timeline-Timeline-0-1-1"
>
  <div
    className="Timeline-Track-0-1-2"
  />
  <div
    className="Timeline-Pointer-0-1-3"
    style={
      Object {
        "left": "0%",
      }
    }
  />
</div>
`;
